# convay

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: byte_stack_vs_heap.rs  byte_state_update.rs  hd_bench.rs  opt_vs_naive.rs  stack_vs_heap.rs  state_update.rs
core/: Cargo.toml  README.md
core/benches/: hd_single_thread.rs
core/src/: avx2.rs  fallback.rs  lib.rs  vec256.rs
public/: index.html  styles.css
public/modules/: main.js  renderer.js  socket.js
src/: bit_state.rs  byte_state.rs  field.rs  lib.rs  main.rs  naive_state.rs  network.rs  rand.rs  state.rs
