[package]
name = "conway"
version = "0.1.0"
edition = "2021"

[dependencies.generic-array]
version = "1.0.0"
default-features = false

[dependencies.rand]
version = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "byte_state_update"
harness = false

[[bench]]
name = "byte_stack_vs_heap"
harness = false
