[package]
name = "conway"
version = "0.1.0"
edition = "2021"

[features]
default=["rand"]
rand=["dep:sha3"]

[dependencies.sha3]
version = "0.10.8"
default-features = false
optional = true

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "hd_bench"
harness = false

[[bench]]
name = "opt_vs_naive"
harness = false
